--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apexcharts": "^3.46.0",
     "clsx": "^2.1.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
