--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/unitedstates": "^1.0.1",
     "apexcharts": "^3.46.0",
+    "axios": "^1.7.2",
     "clsx": "^2.1.0",
+    "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-datepicker": "^6.1.0",
@@ -21,7 +24,9 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
-    "tailwind-merge": "^2.2.1"
+    "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.2.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
